--- a/hello-world/manifest.json
+++ b/hello-world/manifest.json
@@ -2,5 +2,15 @@
   "manifest_version": 2,
   "name":"Hello World",
   "version": "1.0.0",
-  "description": "Dummy hello world..."
+  "description": "Dummy hello world...",
+  "icons":{
+    "128":"./icons/128.png",
+    "48":"./icons/48.png",
+    "32":"./icons/32.png",
+    "16":"./icons/16.png"
+  },
+  "browser_action":{
+    "default_icon":"./icons/16.png",
+    "default_popup":"index.html"
+  }
 }
