--- a/water-reminder/manifest.json
+++ b/water-reminder/manifest.json
@@ -15,5 +15,9 @@
   "background":{
     "scripts":["background.js"],
     "persistent":false
-  }
+  },
+  "permissions":[
+    "alarms",
+    "notifications"
+  ]
 }
