--- a/water-reminder/manifest.json
+++ b/water-reminder/manifest.json
@@ -18,7 +18,8 @@
   },
   "permissions":[
     "alarms",
-    "notifications"
+    "notifications",
+    "storage"
   ],
   "omnibox": { "keyword" : "stuart"}
 }
