add location code

--- a/momentum-clone/manifest.json
+++ b/momentum-clone/manifest.json
@@ -5,5 +5,8 @@
   "description":"Dummy momentum clone",
   "chrome_url_overrides":{
     "newtab": "index.html"
-  }
+  },
+  "permissions":[
+    "geolocation"
+  ]
 }
